--- a/day3/collar/public/index.html
+++ b/day3/collar/public/index.html
@@ -34,7 +34,7 @@
         </div>
       </template>
     </div>
-
+    <button class="bt">Click me to post</button>
     <script src="./index.js"></script>
   </body>
 </html>
